# Modern_Data_Structure

./: README.md  pyproject.toml
01_Using_Github_and_Markdown/: script.ipynb
02_Data_Wrangling_with_Pandas/: binge_clean.csv  hw2.ipynb
03_Writing_Functions_with_ForLoops/: hw3.ipynb
04_Using_Class/: hw4.ipynb
05_String_and_Regex/: hw5.ipynb
06_Writing_Testing_Functions/: hw06.ipynb  test_cipher.py  test_cipher_class.py
07_Create_a_Simple_Python_Package/.ipynb_checkpoints/: hw07-checkpoint.ipynb
08_Writing_Sample_API_Client/: Reddit_China.csv  hw08.ipynb
09_Practicing_SQL_Queries/: hw9.ipynb
